--- a/analysis/03_eating_disorder_stats.Rmd
+++ b/analysis/03_eating_disorder_stats.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "03_eating_disorder_stats"
+title: "Eating disorder paper inference statistics"
 author: "SP"
 date: "`r Sys.Date()`"
 output: 
@@ -17,12 +17,12 @@ editor_options:
   chunk_output_type: console
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(warning = FALSE, echo = FALSE)
+```{r setup, include=FALSE, echo=FALSE}
+knitr::opts_chunk$set(warning = FALSE, echo = TRUE)
 # knitr::opts_knit$set(root.dir = dirname(getwd()))
 ```
 
-```{r libs, include=FALSE}
+```{r libs, include=FALSE, echo=FALSE}
 do_source_data_creation <- FALSE
 source("code/eating_disorder_data_proc.R")
 load_inst_pkgs("tidyverse", "psych", "lmtest", "janitor", "knitr")
@@ -35,19 +35,19 @@ Note: Reported here are the uncorrected p-values. Controlling for FDR is done wi
 ## Eating Disorders {.tabset .tabset-pills}
 
 ### Eating Disorder (ED) cases
-```{r echo=TRUE}
+```{r}
 kruskal.test(icd_f50 ~ covid_pan, df_ed)
 ```
 ### ED-subgroup Anorexia (AN)
-```{r echo=TRUE}
+```{r}
 kruskal.test(f50_type == "Anorexie" ~ covid_pan, df_ed)
 ```
 ### ED-subgroup Bulimia (BN)
-```{r echo=TRUE}
+```{r}
 kruskal.test(f50_type == "Bulimie" ~ covid_pan, df_ed)
 ```
 ### ED-subgroup other EDs (oED)
-```{r echo=TRUE}
+```{r}
 kruskal.test(f50_type == "Essstörung Sonst." ~ covid_pan, df_ed)
 ```
 
@@ -55,29 +55,29 @@ kruskal.test(f50_type == "Essstörung Sonst." ~ covid_pan, df_ed)
 
 ### age
 #### all cases
-```{r echo=TRUE}
+```{r}
 oneway.test(age_adm ~ covid_pan, df_ed)
 ```
 #### ED cases only
-```{r echo=TRUE}
+```{r}
 oneway.test(age_adm ~ covid_pan, df_ed %>% filter(icd_f50 == "F50+"))
 ```
 #### non-ED cases only
-```{r echo=TRUE}
+```{r}
 oneway.test(age_adm ~ covid_pan, df_ed %>% filter(icd_f50 == "F50-"))
 ```
 
 ### sex
 #### all cases
-```{r echo=TRUE}
+```{r}
 kruskal.test(sex ~ covid_pan, df_ed)
 ```
 #### ED cases only
-```{r echo=TRUE}
+```{r}
 kruskal.test(sex ~ covid_pan, df_ed %>% filter(icd_f50 == "F50+"))
 ```
 #### non-ED cases only
-```{r echo=TRUE}
+```{r}
 kruskal.test(sex ~ covid_pan, df_ed %>% filter(icd_f50 == "F50-"))
 ```
 
@@ -85,76 +85,76 @@ kruskal.test(sex ~ covid_pan, df_ed %>% filter(icd_f50 == "F50-"))
 
 ### total comorbidities / number of diagnoses
 #### all cases
-```{r echo=TRUE}
+```{r}
 oneway.test(n_icd_code ~ covid_pan, df_ed)
 ```
 #### ED cases only
-```{r echo=TRUE}
+```{r}
 oneway.test(n_icd_code ~ covid_pan, df_ed %>% filter(icd_f50 == "F50+"))
 ```
 #### non-ED cases only
-```{r echo=TRUE}
+```{r}
 oneway.test(n_icd_code ~ covid_pan, df_ed %>% filter(icd_f50 == "F50-"))
 ```
 
 ### psychiatric comorbidities (co-occuring F-diagnoses)
 #### all cases
-```{r echo=TRUE}
+```{r}
 oneway.test(n_icd_f ~ covid_pan, df_ed)
 ```
 #### ED cases only
-```{r echo=TRUE}
+```{r}
 oneway.test(n_icd_f ~ covid_pan, df_ed %>% filter(icd_f50 == "F50+"))
 ```
 #### non-ED cases only
-```{r echo=TRUE}
+```{r}
 oneway.test(n_icd_f ~ covid_pan, df_ed %>% filter(icd_f50 == "F50-"))
 ```
 
 ### somatic comorbidities (co-occuring non-F-diagnoses)
 #### all cases
-```{r echo=TRUE}
+```{r}
 oneway.test(n_icd_other ~ covid_pan, df_ed)
 ```
 #### ED cases only
-```{r echo=TRUE}
+```{r}
 oneway.test(n_icd_other ~ covid_pan, df_ed %>% filter(icd_f50 == "F50+"))
 ```
 #### non-ED cases only
-```{r echo=TRUE}
+```{r}
 oneway.test(n_icd_other ~ covid_pan, df_ed %>% filter(icd_f50 == "F50-"))
 ```
 
 ### Depressive disorders (DD)
 #### all cases
-```{r echo=TRUE}
+```{r}
 kruskal.test(icd_dd ~ covid_pan, df_ed)
 ```
 #### ED cases only
-```{r echo=TRUE}
+```{r}
 kruskal.test(icd_dd ~ covid_pan, df_ed %>% filter(icd_f50 == "F50+"))
 ```
 #### non-ED cases only
-```{r echo=TRUE}
+```{r}
 kruskal.test(icd_dd ~ covid_pan, df_ed %>% filter(icd_f50 == "F50-"))
 ```
 
 ### Anxiety disorders (AD)
 #### all cases
-```{r echo=TRUE}
+```{r}
 kruskal.test(icd_ad ~ covid_pan, df_ed)
 ```
 #### ED cases only
-```{r echo=TRUE}
+```{r}
 kruskal.test(icd_ad ~ covid_pan, df_ed %>% filter(icd_f50 == "F50+"))
 ```
 #### non-ED cases only
-```{r echo=TRUE}
+```{r}
 kruskal.test(icd_ad ~ covid_pan, df_ed %>% filter(icd_f50 == "F50-"))
 ```
 
 ### combined ED+DD+AD
-```{r echo=TRUE}
+```{r}
 kruskal.test(icd_f50_dd_ad ~ covid_pan, df_ed)
 ```
 
@@ -162,24 +162,24 @@ kruskal.test(icd_f50_dd_ad ~ covid_pan, df_ed)
 
 ### Length of stay
 #### all cases
-```{r echo=TRUE}
+```{r}
 oneway.test(length_stay_brutto ~ covid_pan, df_ed)
 ```
 #### ED cases only
-```{r echo=TRUE}
+```{r}
 oneway.test(length_stay_brutto ~ covid_pan, df_ed %>% filter(icd_f50 == "F50+"))
 ```
 #### non-ED cases only
-```{r echo=TRUE}
+```{r}
 oneway.test(length_stay_brutto ~ covid_pan, df_ed %>% filter(icd_f50 == "F50-"))
 ```
 #### cases with combined ED+DD+AD
-```{r echo=TRUE}
+```{r}
 oneway.test(length_stay_brutto ~ covid_pan, df_ed %>% filter(icd_f50_dd_ad))
 ```
 
 ### re-admissions (v1)
-```{r}
+```{r echo=FALSE}
 re_adm_table <- 
   bind_rows(baseline = df_ed_re_baseline %>% tabyl(is_first_case, icd_f50),
             dur_covid = df_ed_re_covid %>% tabyl(is_first_case, icd_f50),
@@ -189,29 +189,29 @@ re_adm_table <-
   arrange(is_first_case)
 ```
 #### all cases
-```{r echo=TRUE}
+```{r}
 chisq.test(matrix(re_adm_table$combined, nrow = 2))
 ```
 #### ED cases only
-```{r echo=TRUE}
+```{r}
 chisq.test(matrix(re_adm_table$F50plus, nrow = 2))
 ```
 #### non-ED cases only
-```{r echo=TRUE}
+```{r}
 chisq.test(matrix(re_adm_table$F50minus, nrow = 2))
 ```
 
 ### early re-admissions (within 6 months of last discharge)
 #### all cases
-```{r echo=TRUE}
+```{r}
 kruskal.test(re_adm_soon_nona ~ covid_pan, df_ed)
 ```
 #### ED cases only
-```{r echo=TRUE}
+```{r}
 kruskal.test(re_adm_soon_nona ~ covid_pan, df_ed %>% filter(icd_f50 == "F50+"))
 ```
 #### non-ED cases only
-```{r echo=TRUE}
+```{r}
 kruskal.test(re_adm_soon_nona ~ covid_pan, df_ed %>% filter(icd_f50 == "F50-"))
 ```
 
@@ -219,15 +219,15 @@ kruskal.test(re_adm_soon_nona ~ covid_pan, df_ed %>% filter(icd_f50 == "F50-"))
 
 ### psychotropic medication
 #### all cases
-```{r echo=TRUE}
+```{r}
 kruskal.test(psych_med ~ covid_pan, df_ed)
 ```
 #### ED cases only
-```{r echo=TRUE}
+```{r}
 kruskal.test(psych_med ~ covid_pan, df_ed %>% filter(icd_f50 == "F50+"))
 ```
 #### non-ED cases only
-```{r echo=TRUE}
+```{r}
 kruskal.test(psych_med ~ covid_pan, df_ed %>% filter(icd_f50 == "F50-"))
 ```
 
@@ -236,23 +236,23 @@ kruskal.test(psych_med ~ covid_pan, df_ed %>% filter(icd_f50 == "F50-"))
 
 ## School closure severity
 ### all cases
-```{r echo=TRUE}
+```{r}
 kruskal.test(icd_f50 ~ covid_lockd_sev, df_ed_covid)
 ```
 ### AN cases only
-```{r echo=TRUE}
+```{r}
 kruskal.test(f50_type == "Anorexie" ~ covid_lockd_sev, df_ed_covid)
 ```
 ### BN cases only
-```{r echo=TRUE}
+```{r}
 kruskal.test(f50_type == "Bulimie" ~ covid_lockd_sev, df_ed_covid)
 ```
 ### oED cases only
-```{r echo=TRUE}
+```{r}
 kruskal.test(f50_type == "Essstörung Sonst." ~ covid_lockd_sev, df_ed_covid)
 ```
 ### cases with combined ED+DD+AD
-```{r echo=TRUE}
+```{r}
 kruskal.test(icd_f50_dd_ad ~ covid_lockd_sev, df_ed_covid)
 ```
 
@@ -260,38 +260,38 @@ kruskal.test(icd_f50_dd_ad ~ covid_lockd_sev, df_ed_covid)
 
 ### trend of ED share over periods
 #### all cases
-```{r echo=TRUE}
+```{r}
 cor.test(df_ed_covid$icd_f50 %>% as.numeric(),
          df_ed_covid$covid_period_i %>% as.numeric(),
          method = "spearman")
 ```
 #### AN cases only
-```{r echo=TRUE}
+```{r}
 cor.test((df_ed_covid$f50_type == "Anorexie") %>% as.numeric(),
          df_ed_covid$covid_period_i %>% as.numeric(),
          method = "spearman")
 ```
 #### BN cases only
-```{r echo=TRUE}
+```{r}
 cor.test((df_ed_covid$f50_type == "Bulimie") %>% as.numeric(),
          df_ed_covid$covid_period_i %>% as.numeric(),
          method = "spearman")
 ```
 #### oED cases only
-```{r echo=TRUE}
+```{r}
 cor.test((df_ed_covid$f50_type == "Essstörung Sonst.") %>% as.numeric(),
          df_ed_covid$covid_period_i %>% as.numeric(),
          method = "spearman")
 ```
 #### cases with combined ED+DD+AD
-```{r echo=TRUE}
+```{r}
 cor.test(df_ed_covid$icd_f50_dd_ad %>% as.numeric(),
          df_ed_covid$covid_period_i %>% as.numeric(),
          method = "spearman")
 ```
 
 ### comparison of pandemic phase with same months of the respective baseline period
-```{r}
+```{r echo=FALSE}
 create_covid_period_baseline_df <- function(i = 1L) {
   df_ed %>% 
     # baseline period
@@ -305,32 +305,32 @@ create_covid_period_baseline_df <- function(i = 1L) {
 }
 ```
 #### phase 1: 1st open period
-```{r echo=TRUE}
+```{r}
 kruskal.test(icd_f50 ~ covid_pan, create_covid_period_baseline_df(1))
 ```
 #### phase 2: 1st school closure period
-```{r echo=TRUE}
+```{r}
 kruskal.test(icd_f50 ~ covid_pan, create_covid_period_baseline_df(2))
 ```
 #### phase 3: 2nd open period
-```{r echo=TRUE}
+```{r}
 kruskal.test(icd_f50 ~ covid_pan, create_covid_period_baseline_df(3))
 ```
 #### phase 4: 2nd school closure period
-```{r echo=TRUE}
+```{r}
 kruskal.test(icd_f50 ~ covid_pan, create_covid_period_baseline_df(4))
 ```
 #### phase 5: 3rd open period
-```{r echo=TRUE}
+```{r}
 kruskal.test(icd_f50 ~ covid_pan, create_covid_period_baseline_df(5))
 ```
 
 ### Granger causality model: AN by school closure severity
-```{r echo=TRUE}
+```{r}
 grangertest(AN_prop ~ as.numeric(covid_lockd_sev), order = 6, data = df_ed_covid_monthly)
 ```
 #### Impulse response function
-```{r}
+```{r echo=FALSE}
 # test for stationarity
 library(tseries)
 adf.test(df_ed_covid_monthly$AN_prop, k = 6)
