--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -10,15 +10,16 @@ editor_options:
 
 CoverCHILD KGU data analysis repo.
 
-[Visualisation of extreme/edge cases in KGU data.](01_vis_data_edge_cases.html)
-
-[Eating disorder descriptive stats in KGU data.](03_eating_disorder_stats.html)
+- [Visualisation of extreme/edge cases in KGU data](01_vis_data_edge_cases.html)
+- [Eating disorder paper descriptive statistics](02_eating_disorder_descr.html)
+- [Eating disorder paper inference statistics](03_eating_disorder_stats.html)
+- [Eating disorder paper plots](04_eating_disorder_plots.html)
+- [Items to discuss](99_to_discuss.html)
 
 
 Also see notes/documentation on elab:
 
-[data analysis plan](https://elab.chiocchettilab.uni-frankfurt.de/experiments.php?mode=view&id=160)
-
-[ETL steps](https://elab.chiocchettilab.uni-frankfurt.de/experiments.php?mode=view&id=159)
-
-[notes](https://elab.chiocchettilab.uni-frankfurt.de/experiments.php?mode=view&id=140)
+- [data analysis plan](https://elab.chiocchettilab.uni-frankfurt.de/experiments.php?mode=view&id=160)
+- [ETL steps](https://elab.chiocchettilab.uni-frankfurt.de/experiments.php?mode=view&id=159)
+- [notes](https://elab.chiocchettilab.uni-frankfurt.de/experiments.php?mode=view&id=140)
+- [FHIR ETL notes](https://elab.chiocchettilab.uni-frankfurt.de/experiments.php?mode=view&id=205)
