Refactor ED plot labelling.

--- a/analysis/04_eating_disorder_plots.Rmd
+++ b/analysis/04_eating_disorder_plots.Rmd
@@ -50,14 +50,22 @@ gu_pref_colours <- set_names(list_c(gu_colours)[c("gu_lichtblau", "gu_gruen", "g
 plotdir <- file.path(outdir, "ed_plots")
 dir.create(plotdir, recursive = TRUE, showWarnings = FALSE)
 # customise ggsave function with different defaults if necessary
-ed_ggsave <- function(filename, path = plotdir, device = "svg", scale = 2, ...) {
-  ggsave(path = path, filename = paste(filename, device, sep = "."), device = device, scale = scale, ...)
+ed_ggsave <- function(filename, path = plotdir, device = "tiff", scale = 1, dpi = 300, ...) {
+  ggsave(path = path, filename = paste(filename, device, sep = "."), device = device, scale = scale, dpi = dpi, ...)
 }
 ```
 
 # trend of ED diagnosis proportions
 
 ## full study period {.tabset .tabset-pills}
+```{r}
+ed_subcat_label <- "ED Type"
+ed_labels <- c("AN", "BN", "oED")
+trend_y_label_share <- "share of cases with ED diagnosis [%]"
+trend_y_label_abs <- "number of cases with ED diagnosis"
+covid_onset_label <- "Onset of\nCOVID-19\npandemic"
+```
+
 ### relative
 ```{r}
 # relative
@@ -65,15 +73,15 @@ ed_ggsave <- function(filename, path = plotdir, device = "svg", scale = 2, ...) 
     ggplot(aes(x = adm_year_month, y = prop*100, group = f50_type, fill = f50_type)) + 
     geom_area() +
     # geom_col() +
-    scale_fill_discrete(type = gu_pref_colours, name = "ED Type", labels = c("AN", "BN", "oED")) +
+    scale_fill_discrete(type = gu_pref_colours, name = ed_subcat_label, labels = ed_labels) +
     guides(x = guide_axis(angle = -90)) + 
     geom_vline(aes(xintercept = "2020.3"), show.legend = FALSE) +
-    labs(title = "monthly share of cases with ED diagnosis", 
-         x = "Year.Month", y = "share of cases with ED diagnosis [%]") +
-    geom_text(aes(x = "2020.3", y = 30), label = "Begin of\nCovid \npandemic",
+    labs(# title = "monthly share of cases with ED diagnosis", 
+         x = "Year.Month", y = trend_y_label_share) +
+    geom_text(aes(x = "2020.3", y = 30), label = covid_onset_label,
               hjust = "left", vjust = "top", nudge_x = 0.3, nudge_y = 0.5, check_overlap = TRUE) +
     theme_classic()} %T>% 
-  {if (do_save_objects) ed_ggsave("ED_share_monthly_whole_period", plot = .)}
+  {if (do_save_objects) ed_ggsave("Fig1B_ED_whole_period_monthly_share", plot = .)}
 ```
 
 ### absolute
@@ -83,18 +91,25 @@ ed_ggsave <- function(filename, path = plotdir, device = "svg", scale = 2, ...) 
     ggplot(aes(x = adm_year_month, y = abs, group = f50_type, fill = f50_type)) + 
     geom_area() +
     # geom_col() +
-    scale_fill_discrete(type = gu_pref_colours, name = "ED Type", labels = c("AN", "BN", "oED")) +
+    scale_fill_discrete(type = gu_pref_colours, name = ed_subcat_label, labels = ed_labels) +
     guides(x = guide_axis(angle = -90)) + 
     geom_vline(aes(xintercept = "2020.3"), show.legend = FALSE) +
-    labs(title = "number of monthly cases with ED diagnosis", 
-         x = "Year.Month", y = "number of cases with ED diagnosis") +
-    geom_text(aes(x = "2020.3", y = 12), label = "Begin of\nCovid \npandemic",
+    labs(# title = "number of monthly cases with ED diagnosis", 
+         x = "Year.Month", y = trend_y_label_abs) +
+    geom_text(aes(x = "2020.3", y = 12), label = covid_onset_label,
               hjust = "left", vjust = "top", nudge_x = 0.3, nudge_y = 0.5, check_overlap = TRUE) +
     theme_classic()} %T>% 
-  {if (do_save_objects) ed_ggsave("ED_absolute_monthly_whole_period", plot = .)}
+  {if (do_save_objects) ed_ggsave("Fig1A_ED_whole_period_monthly_absolute", plot = .)}
 ```
 
 ## covid pandemic with school closure periods {.tabset .tabset-pills}
+```{r}
+school_closure_label <- "School closure periods"
+school_closure_severity_labels <- c("1" = "partial", "2" = "full (incl. holidays)")
+covid_phase_labels <- list(NULL = "1", "1st school\nclosure" = "2", "1st open period" = "3",
+                           "2nd school closure" = "4", "2nd open period" = "5")
+```
+
 ### relative
 ```{r}
 # relative
@@ -108,27 +123,25 @@ ed_ggsave <- function(filename, path = plotdir, device = "svg", scale = 2, ...) 
               ymin = 0, ymax = 100, inherit.aes = FALSE) +
     scale_colour_discrete(aesthetics = c("colour", "fill"),
                           type = set_names(gu_colours$greys, NULL),
-                          name = "School closure periods", labels = c("1" = "partial", "2" = "full (incl. holidays)")) +
+                          name = school_closure_label, labels = school_closure_severity_labels) +
     new_scale_fill() +
     # stacked area plot
     geom_area(aes(fill = f50_type)) +
-    scale_fill_discrete(type = gu_pref_colours, name = "ED Type", labels = c("AN", "BN", "oED")) +
+    scale_fill_discrete(type = gu_pref_colours, name = ed_subcat_label, labels = ed_labels) +
     # labs
     geom_vline(aes(xintercept = period_end_year_week), data = df_covid_periods_is_lockd) +
     geom_text(aes(x = period_start_year_week,
-                  label = as_factor(period_i_is_lockd) %>%
-                    fct_recode(NULL = "1", "1st school closure" = "2", "2nd open period" = "3",
-                               "2nd school closure" = "4", "3rd open period" = "5")),
+                  label = as_factor(period_i_is_lockd) %>% fct_recode(!!!covid_phase_labels)),
               y = 103, hjust = "left", vjust = "top", nudge_x = 0.75,
               data = df_covid_periods_is_lockd, inherit.aes = FALSE, na.rm = TRUE) +
     scale_x_discrete(
       breaks = 
         levels(df_ed_covid_weekly_long$adm_year_week)[seq(1, length(levels(df_ed_covid_weekly_long$adm_year_week)), 2)],
       guide = guide_axis(angle = -90)) +
-    labs(title = "weekly share of cases with ED diagnosis during Covid pandemic", 
-         x = "Year.Week", y = "share of cases with ED diagnosis [%]") +
+    labs(# title = "weekly share of cases with ED diagnosis during Covid pandemic", 
+         x = "Year.Week", y = trend_y_label_share) +
     theme_classic()} %T>% 
-  {if (do_save_objects) ed_ggsave("ED_share_weekly_covid_period", plot = .)}
+  {if (do_save_objects) ed_ggsave("Fig3B_ED_covid_period_weekly_share", plot = .)}
 ```
 
 ### absolute
@@ -144,27 +157,25 @@ ed_ggsave <- function(filename, path = plotdir, device = "svg", scale = 2, ...) 
               ymin = 0, ymax = 5, inherit.aes = FALSE) +
     scale_colour_discrete(aesthetics = c("colour", "fill"),
                           type = set_names(gu_colours$greys, NULL),
-                          name = "School closure periods", labels = c("1" = "partial", "2" = "full (incl. holidays)")) +
+                          name = school_closure_label, labels = school_closure_severity_labels) +
     new_scale_fill() +
     # stacked area plot
     geom_area(aes(fill = f50_type)) +
-    scale_fill_discrete(type = gu_pref_colours, name = "ED Type", labels = c("AN", "BN", "oED")) +
+    scale_fill_discrete(type = gu_pref_colours, name = ed_subcat_label, labels = ed_labels) +
     # labs
     geom_vline(aes(xintercept = period_end_year_week), data = df_covid_periods_is_lockd) +
-    geom_text(aes(x = period_start_year_week, 
-                  label = as_factor(period_i_is_lockd) %>%
-                    fct_recode(NULL = "1", "1st school closure" = "2", "2nd open period" = "3",
-                               "2nd school closure" = "4", "3rd open period" = "5")),
+    geom_text(aes(x = period_start_year_week,
+                  label = as_factor(period_i_is_lockd) %>% fct_recode(!!!covid_phase_labels)),
               y = 5.15, hjust = "left", vjust = "top", nudge_x = 0.75,
               data = df_covid_periods_is_lockd, inherit.aes = FALSE, na.rm = TRUE) +
     scale_x_discrete(
       breaks =
         levels(df_ed_covid_weekly_long$adm_year_week)[seq(1, length(levels(df_ed_covid_weekly_long$adm_year_week)), 2)],
       guide = guide_axis(angle = -90)) +
-    labs(title = "number of weekly cases with ED diagnosis during Covid pandemic", 
-         x = "Year.Week", y = "number of cases with ED diagnosis") +
+    labs(# title = "number of weekly cases with ED diagnosis during Covid pandemic", 
+         x = "Year.Week", y = trend_y_label_abs) +
     theme_classic()} %T>% 
-  {if (do_save_objects) ed_ggsave("ED_absolute_weekly_covid_period", plot = .)}
+  {if (do_save_objects) ed_ggsave("Fig3A_ED_covid_period_weekly_absolute", plot = .)}
 ```
 
 ## baseline-year comparison
@@ -219,12 +230,12 @@ df_ed_monthly_baseline %>%
                           type = gu_pref_colours, name = "ED Diagnosis", labels = c("no ED", "ED")) +
     guides(x = guide_axis(angle = -90)) +
     geom_vline(aes(xintercept = "2020.3"), show.legend = FALSE) +
-    labs(title = "Share of readmissions within 6 months for cases with and without ED",
+    labs(# title = "Share of readmissions within 6 months for cases with and without ED",
          x = "Year.Month", y = "Share of readmissions within 6 months [%]") +
-    geom_text(aes(x = "2020.3", y = 100, label = "Onset\nCovid\nPandemic", hjust = "left", vjust = "top"),
+    geom_text(aes(x = "2020.3", y = 100, label = covid_onset_label, hjust = "left", vjust = "top"),
               nudge_x = 0.3, nudge_y = 0.5, check_overlap = TRUE) +
     theme_classic()} %T>% 
-  {if (do_save_objects) ed_ggsave("Readmission_share_monthly_whole_period", plot = .)}
+  {if (do_save_objects) ed_ggsave("Fig2A_Readmission_whole_period_monthly_share", plot = .)}
 ```
 
 
@@ -244,15 +255,16 @@ df_ed_monthly_baseline %>%
     pivot_longer(starts_with(c("is_first_case_rel", "re_adm_soon_nona")),
                  names_to = c("variable", ".value"), names_sep = "__") %>%
     
+    # plot
     ggplot(aes(x = adm_year, y = prop, fill = variable)) +
     geom_col() +
     geom_errorbar(aes(ymin = prop-se, ymax = prop+se), width = 0.25) +
     facet_wrap(vars(variable), labeller = as_labeller(c("is_first_case_rel" = "First presentation (within 2 years)",
                                                         "re_adm_soon_nona" = "Early re-admission (within 6 months)"))) +
     scale_fill_discrete(type = gu_pref_colours, guide = NULL) +
-    labs(title = "Share of first presentations and re-admissions of ED patients by year",
+    labs(# title = "Share of first presentations and re-admissions of ED patients by year",
          x = "Year", y = "Share of cases in all ED cases [%]") +
     scale_y_continuous(limits = c(0, 100)) +
     theme_classic()} %T>% 
-  {if (do_save_objects) ed_ggsave("First-presentation+readmisson_shares_in_ED", plot = .)}
+  {if (do_save_objects) ed_ggsave("Fig2B_De-novo-presentation+readmisson_shares_in_ED", plot = .)}
 ```
