--- a/analysis/02_eating_disorder_descr.Rmd
+++ b/analysis/02_eating_disorder_descr.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Eating disorder paper descriptive statistics"
-author: "SP"
+author: "simeonplatte"
 date: "`r Sys.Date()`"
 output: 
   workflowr::wflow_html: 
