--- a/analysis/03_eating_disorder_stats.Rmd
+++ b/analysis/03_eating_disorder_stats.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Eating disorder paper inference statistics"
-author: "SP"
+author: "simeonplatte"
 date: "`r Sys.Date()`"
 output: 
   workflowr::wflow_html: 
