--- a/analysis/01_vis_data_edge_cases.Rmd
+++ b/analysis/01_vis_data_edge_cases.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "CoverCHILD KGU data edge cases"
-author: "SP"
+author: "simeonplatte"
 date: "`r Sys.Date()`"
 output: 
   workflowr::wflow_html: 
